--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ DJANGO_SUPERUSER_PASSWORD=1234
 DJANGO_ALLOWED_HOSTS=127.0.0.1 localhost [::1] django 0.0.0.0
 DJANGO_SECRET_KEY=django-insecure-r1j62i9xuhy@_u+1i6h6c3tg*!lp53ns@6w2-n0od0a$d)9c9p
 DJANGO_DEBUG=1
+PAGINATE_BY=50
 
 # PostgreSQL
 POSTGRES_DB=movies_database
@@ -14,3 +15,4 @@ POSTGRES_PASSWORD=123qwe
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 DB_URL=psql://app:123qwe@127.0.0.1:5432/movies_database
+
