--- a/.env_example
+++ b/.env_example
@@ -4,6 +4,7 @@ DJANGO_SUPERUSER_EMAIL=
 DJANGO_SUPERUSER_PASSWORD=
 DJANGO_ALLOWED_HOSTS=
 DJANGO_SECRET_KEY=
+PAGINATE_BY=
 
 # PostgreSQL
 POSTGRES_DB=
