--- a/movies_admin/uwsgi/uwsgi.ini
+++ b/movies_admin/uwsgi/uwsgi.ini
@@ -1,26 +1,36 @@
 [uwsgi]
-wsgi-file = config/wsgi.py
 socket = :8000
 protocol = http
-#uid = www-data
-#gid = www-data
+
+uid = myuser
+gid = myuser
+
 master = true
 no-orphans = true
+
 die-on-term = true
 single-interpreter = true
+
 lazy-apps = true
-processes = $UWSGI_PROCESSES
-threads = $UWSGI_THREADS
+
+processes = $(UWSGI_PROCESSES)
+threads = $(UWSGI_THREADS)
 enable-threads = true
+
 max-requests = 5000
+
 need-app = true
-harakiri = $UWSGI_HARAKIRI
+harakiri = $(UWSGI_HARAKIRI)
 harakiri-verbose = true
+
 vacuum = true
+
 reload-mercy = 10
-chdir = /opt/app
+
+chdir = /opt/app/movies_admin
+wsgi-file = movies_adminp/wsgi.py
+
 post-buffering = 1048576
 buffer-size = 65535
-
-static-map = /static=/var/wwww/static
-static-map = /media=/var/wwww/media
+static-map = /static=/opt/app/movies_admin/static
+static-map = /media=/opt/app/movies_admin/media
