--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,32 +13,28 @@ services:
 #    user: myuser
   django:
     container_name: django_movie
-    build: ./movies_admin
+    build: .
+    image: app_django
     restart: always
     ports:
       - "8000:8000"
     volumes:
-      - static:/opt/app/static/
-      - media:/opt/app/media/
+      - /movies_admin/static:/opt/app/movies_admin/static/
+      - ./movies_admin/media:/opt/app/movies_admin/media/
     env_file:
       - ./.env
     depends_on:
       - postgres
-    command:  uwsgi --ini /opt/app/uwsgi.ini
-#    command: sh -c "python movies_admin/manage.py collectstatic --no-input &&
-#      python movies_admin/manage.py makemigrations &&
-#      python movies_admin/manage.py migrate &&
-#      python movies_admin/manage.py runserver 0.0.0.0:8000"
 #    user: myuser
   nginx:
     image: nginx:latest
     container_name: nginx_movie
     restart: always
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
-      - ./movies_admin/static:/usr/share/nginx/html/static/:ro
-      - ./movies_admin/media:/usr/share/nginx/html/media/:ro
+      - ./movies_admin/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./movies_admin/nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./movies_admin/static:/app/static/
+      - ./movies_admin/media:/app/media/
     depends_on:
       - django
     ports:
