--- a/movies_admin/nginx/conf.d/default.conf
+++ b/movies_admin/nginx/conf.d/default.conf
@@ -1,25 +1,23 @@
+upstream web {
+    server django:8000;
+}
 
 server {
     listen       80 default_server;
     listen       [::]:80 default_server;
     server_name  _;
-    charset     utf-8;
 
-    root /data;
-
-    location @backend {
-        proxy_pass http://django:8000;
+    location / {
+        proxy_pass http://web:8000;
     }
 
+    location /static/{
+         alias  /app/static/;
+    }
 
-
-   location /static/ {
-    alias /usr/share/nginx/html/static/;
-}
-
-location /media/ {
-    alias /usr/share/nginx/html/media/;
-}
+    location /media/{
+         alias  /app/media/;
+    }
 
     error_page   404              /404.html;
     error_page   500 502 503 504  /50x.html;
@@ -27,5 +25,8 @@ location /media/ {
         root   html;
     }
 }
+
+
+
 
 
