--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
 dataclasses==0.6
 Django==4.2.5
+django-cors-headers==4.3.1
+django-debug-toolbar==4.3.0
 gunicorn==21.2.0
 packaging==23.2
 psycopg2==2.9.9
